--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </main>
     <footer>
         <nav>
-            <a href="#" rel="next"><img width="80px" src="img/NerdFlow-logo-200x200.png" alt="Logo"></a>
+            <div class="logo-container"><a href="#" rel="next"><img width="80px" src="img/NerdFlow-logo-200x200.png" alt="Logo"></a></div>
             <ul>
                 <li><a class="footer-links" href="#" rel="next">Fale Conosco</a></li>
                 <li><a class="footer-links" href="#" rel="next">Sobre nós</a></li>
